<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sort_by"
        android:checkable="false"
        android:title="@string/sort_by">
        <menu>
            <item
                android:id="@+id/by_creation_date"
                android:title="@string/by_creation_date" />
            <item
                android:id="@+id/by_due_date"
                android:title="@string/by_due_date" />
            <item
                android:id="@+id/by_alphabetically"
                android:title="@string/by_alphabetically" />
            <item
                android:id="@+id/by_completed"
                android:title="@string/by_completed" />
            <item
                android:id="@+id/by_not_completed"
                android:title="@string/by_not_completed" />
        </menu>
    </item>
</menu>